; ModuleID = '/home/carl/AnghaBench/sway/sway/tree/extr_view.c_view_update_csd_from_client.c'
source_filename = "/home/carl/AnghaBench/sway/sway/tree/extr_view.c_view_update_csd_from_client.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_view = type { i32, %struct.sway_container* }
%struct.sway_container = type { i64, i64 }

@SWAY_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"View %p updated CSD to %i\00", align 1
@B_CSD = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @view_update_csd_from_client(%struct.sway_view* %0, i32 %1) #0 {
  %3 = alloca %struct.sway_view*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.sway_container*, align 8
  store %struct.sway_view* %0, %struct.sway_view** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @SWAY_DEBUG, align 4
  %7 = load %struct.sway_view*, %struct.sway_view** %3, align 8
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @sway_log(i32 %6, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), %struct.sway_view* %7, i32 %8)
  %10 = load %struct.sway_view*, %struct.sway_view** %3, align 8
  %11 = getelementptr inbounds %struct.sway_view, %struct.sway_view* %10, i32 0, i32 1
  %12 = load %struct.sway_container*, %struct.sway_container** %11, align 8
  store %struct.sway_container* %12, %struct.sway_container** %5, align 8
  %13 = load i32, i32* %4, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %38

15:                                               ; preds = %2
  %16 = load %struct.sway_container*, %struct.sway_container** %5, align 8
  %17 = icmp ne %struct.sway_container* %16, null
  br i1 %17, label %18, label %38

18:                                               ; preds = %15
  %19 = load %struct.sway_container*, %struct.sway_container** %5, align 8
  %20 = getelementptr inbounds %struct.sway_container, %struct.sway_container* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = load i64, i64* @B_CSD, align 8
  %23 = icmp ne i64 %21, %22
  br i1 %23, label %24, label %38

24:                                               ; preds = %18
  %25 = load %struct.sway_container*, %struct.sway_container** %5, align 8
  %26 = getelementptr inbounds %struct.sway_container, %struct.sway_container* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = load %struct.sway_container*, %struct.sway_container** %5, align 8
  %29 = getelementptr inbounds %struct.sway_container, %struct.sway_container* %28, i32 0, i32 1
  store i64 %27, i64* %29, align 8
  %30 = load %struct.sway_container*, %struct.sway_container** %5, align 8
  %31 = call i64 @container_is_floating(%struct.sway_container* %30)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %37

33:                                               ; preds = %24
  %34 = load i64, i64* @B_CSD, align 8
  %35 = load %struct.sway_container*, %struct.sway_container** %5, align 8
  %36 = getelementptr inbounds %struct.sway_container, %struct.sway_container* %35, i32 0, i32 0
  store i64 %34, i64* %36, align 8
  br label %37

37:                                               ; preds = %33, %24
  br label %57

38:                                               ; preds = %18, %15, %2
  %39 = load i32, i32* %4, align 4
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %56, label %41

41:                                               ; preds = %38
  %42 = load %struct.sway_container*, %struct.sway_container** %5, align 8
  %43 = icmp ne %struct.sway_container* %42, null
  br i1 %43, label %44, label %56

44:                                               ; preds = %41
  %45 = load %struct.sway_container*, %struct.sway_container** %5, align 8
  %46 = getelementptr inbounds %struct.sway_container, %struct.sway_container* %45, i32 0, i32 0
  %47 = load i64, i64* %46, align 8
  %48 = load i64, i64* @B_CSD, align 8
  %49 = icmp eq i64 %47, %48
  br i1 %49, label %50, label %56

50:                                               ; preds = %44
  %51 = load %struct.sway_container*, %struct.sway_container** %5, align 8
  %52 = getelementptr inbounds %struct.sway_container, %struct.sway_container* %51, i32 0, i32 1
  %53 = load i64, i64* %52, align 8
  %54 = load %struct.sway_container*, %struct.sway_container** %5, align 8
  %55 = getelementptr inbounds %struct.sway_container, %struct.sway_container* %54, i32 0, i32 0
  store i64 %53, i64* %55, align 8
  br label %56

56:                                               ; preds = %50, %44, %41, %38
  br label %57

57:                                               ; preds = %56, %37
  %58 = load i32, i32* %4, align 4
  %59 = load %struct.sway_view*, %struct.sway_view** %3, align 8
  %60 = getelementptr inbounds %struct.sway_view, %struct.sway_view* %59, i32 0, i32 0
  store i32 %58, i32* %60, align 8
  ret void
}

declare dso_local i32 @sway_log(i32, i8*, %struct.sway_view*, i32) #1

declare dso_local i64 @container_is_floating(%struct.sway_container*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
